templates/jupyter-diff_template.yaml
---
# Source: jupyter-diff/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-jupyter-diff
  labels:
    helm.sh/chart: jupyter-diff-1.0.0
    app.kubernetes.io/name: jupyter-diff
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: jupyter-diff
    app.kubernetes.io/instance: release-name
---
# Source: jupyter-diff/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-jupyter-diff
  labels:
    helm.sh/chart: jupyter-diff-1.0.0
    app.kubernetes.io/name: jupyter-diff
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: jupyter-diff
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jupyter-diff
        app.kubernetes.io/instance: release-name
    spec:
      serviceAccountName: default
      securityContext:
        {}
      containers:
        - name: jupyter-diff
          securityContext:
            {}
          image: "kyso/jupyter-diff:"
          imagePullPolicy: IfNotPresent
          ports:
            - name: jpytr-diff-http
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: jpytr-diff-http
          readinessProbe:
            httpGet:
              path: /
              port: jpytr-diff-http
          resources:
            {}
---
# Source: jupyter-diff/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-jupyter-diff
  labels:
    helm.sh/chart: jupyter-diff-1.0.0
    app.kubernetes.io/name: jupyter-diff
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
spec:
  rules:
---
# Source: jupyter-diff/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "release-name-jupyter-diff-test-connection"
  labels:
    helm.sh/chart: jupyter-diff-1.0.0
    app.kubernetes.io/name: jupyter-diff
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['release-name-jupyter-diff:80/']
  restartPolicy: Never
